--- a/GAP-FrontEnd/src/app/Components/Fonctions/liste-fonctions/liste-fonctions.component.html
+++ b/GAP-FrontEnd/src/app/Components/Fonctions/liste-fonctions/liste-fonctions.component.html
@@ -25,7 +25,7 @@
                   </button>
                   <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
                     <a type="button" class="dropdown-item" data-toggle="modal" data-target="#addModal">Ajouter une fonction</a>
-
+                    <a type="button" class="dropdown-item" (click)="exportExel()">Export Excel</a>
                   </div>
                 </div>
               </div>
