--- a/GAP-FrontEnd/src/app/Components/Livraison/liste-livraisons/liste-livraisons.component.html
+++ b/GAP-FrontEnd/src/app/Components/Livraison/liste-livraisons/liste-livraisons.component.html
@@ -25,7 +25,7 @@
               </button>
               <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
                 <a type="button" class="dropdown-item" data-toggle="modal" data-target="#addModal">Ajouter une livraison</a>
-                <a type="button" class="dropdown-item" (click)="exportExel()">Export Excel</a>
+                <a type="button" class="dropdown-item" (click)="exportExcel()">Export Excel</a>
               </div>
             </div>
           </div>
@@ -154,8 +154,13 @@
                   <td class="col-id">{{ post?.id }}</td>
 
                   <td class="col-affaire">
-                    <div class="cell-content">{{ post?.projet?.code + ' - ' + post?.projet?.designation }}</div>
+                    <div class="affaire-cell">
+                      <div class="affaire-code">{{ post?.projet?.code }}</div>
+                      <div class="affaire-designation">{{ post?.projet?.designation }}</div>
+                    </div>
                   </td>
+
+
 
                   <td class="col-atelier">
                     <div class="cell-content">{{ post?.atelier?.designation }}</div>
