--- a/GAP-FrontEnd/src/app/Components/Logistique/Livraisons/liste-livraison-log/liste-livraison-log.component.html
+++ b/GAP-FrontEnd/src/app/Components/Logistique/Livraisons/liste-livraison-log/liste-livraison-log.component.html
@@ -25,7 +25,7 @@
               </button>
               <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
                 <a type="button" class="dropdown-item" data-toggle="modal" data-target="#addModal">Ajouter une livraison</a>
-                <a type="button" class="dropdown-item" (click)="exportExel()">Export Excel</a>
+
               </div>
             </div>
           </div>
@@ -152,8 +152,13 @@
                 <tr *ngFor="let post of POSTS | search:pfiltre | paginate:{ itemsPerPage: tableSize, currentPage: page, totalItems: count }">
                   <td class="col-id">{{ post?.id }}</td>
 
+
+
                   <td class="col-affaire">
-                    <div class="cell-content">{{ post?.projet?.code + ' - ' + post?.projet?.designation }}</div>
+                    <div class="affaire-cell">
+                      <div class="affaire-code">{{ post?.projet?.code }}</div>
+                      <div class="affaire-designation">{{ post?.projet?.designation }}</div>
+                    </div>
                   </td>
 
                   <td class="col-date-livraison">{{ post?.dateLivraison | date: 'dd/MM/yyyy' }}</td>
