--- a/GAP-FrontEnd/src/app/Components/OrdreFabrication/liste-of/liste-of.component.html
+++ b/GAP-FrontEnd/src/app/Components/OrdreFabrication/liste-of/liste-of.component.html
@@ -204,7 +204,7 @@
                       </div>
                     </td>
 
-                    <td class="col-quantite">{{ (post?.quantiteTot || 0) | number:'1.0-2' }}</td>
+                    <td class="col-quantite">{{ (post?.quantite || 0) | number:'1.0-2' }}</td>
 
                     <td class="col-actions text-center">
                       <div class="d-flex justify-content-center flex-wrap">
