--- a/GAP-FrontEnd/src/app/Components/OrdreFabrication/add-of/add-of.component.html
+++ b/GAP-FrontEnd/src/app/Components/OrdreFabrication/add-of/add-of.component.html
@@ -3,7 +3,7 @@
 
   <div class="modal-content card radius-15">
     <div class="modal-header">
-      <h5 class="modal-title">Ajouter un ordre de fabrication</h5>
+      <h5 class="modal-title">Ajouter un déplacement</h5>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">	<span aria-hidden="true">&times;</span>
       </button>
     </div>
