--- a/GAP-FrontEnd/src/app/Components/Deplacements/liste-deplacements/liste-deplacements.component.html
+++ b/GAP-FrontEnd/src/app/Components/Deplacements/liste-deplacements/liste-deplacements.component.html
@@ -20,11 +20,13 @@
             <!-- Settings Button -->
             <div class="btn-group">
               <button type="button" class="btn btn-primary">Paramètres</button>
-              <button type="button" class="btn btn-primary bg-split-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown">
+              <button type="button" class="btn btn-primary bg-split-primary dropdown-toggle dropdown-toggle-split"
+                data-toggle="dropdown">
                 <span class="sr-only">Toggle Dropdown</span>
               </button>
               <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
-                <a type="button" class="dropdown-item" data-toggle="modal" data-target="#addModal">Ajouter un déplacement</a>
+                <a type="button" class="dropdown-item" data-toggle="modal" data-target="#addModal">Ajouter un
+                  déplacement</a>
                 <a type="button" class="dropdown-item" (click)="exportExel()">Export Excel</a>
               </div>
             </div>
@@ -39,9 +41,11 @@
               <!-- Search Bar -->
               <div class="form-inline my-2 my-lg-0">
                 <div class="input-group">
-                  <input type="text" class="form-control" placeholder="Rechercher affaire..." [(ngModel)]="pfiltre" aria-label="Search">
+                  <input type="text" class="form-control" placeholder="Rechercher affaire..." [(ngModel)]="pfiltre"
+                    aria-label="Search">
                   <div class="input-group-append">
-                    <button class="btn btn-white" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+                    <button class="btn btn-white" type="button" data-toggle="collapse" data-target="#collapseExample"
+                      aria-expanded="false" aria-controls="collapseExample">
                       <i class="lni lni-funnel"></i>
                     </button>
                   </div>
@@ -50,7 +54,8 @@
               <!-- Rows per Page Selector -->
               <div class="d-flex align-items-center">
                 Afficher&nbsp;
-                <select [(ngModel)]="tableSize" class="custom-select custom-select-sm form-control form-control-sm" style="width: 100px;" (change)="onTableSizeChange()">
+                <select [(ngModel)]="tableSize" class="custom-select custom-select-sm form-control form-control-sm"
+                  style="width: 100px;" (change)="onTableSizeChange()">
                   <option [value]="10">10</option>
                   <option [value]="20">20</option>
                   <option [value]="50">50</option>
@@ -96,12 +101,12 @@
                   <div class="form-group row align-items-center">
                     <div class="col-sm-2">
                       <label class="col-form-label mt-1">Motif</label>
-                      <input type="text" id="motif"  class="form-control"
-                             formControlName="motif">
+                      <input type="text" id="motif" class="form-control" formControlName="motif">
                     </div>
                     <div class="col-sm-3">
                       <label for="dateDebut" class="col-form-label">Date de début</label>
-                      <input type="date" id="dateDebut" [max]="dateFin" class="form-control" formControlName="dateDebut">
+                      <input type="date" id="dateDebut" [max]="dateFin" class="form-control"
+                        formControlName="dateDebut">
                     </div>
                     <div class="col-sm-3">
                       <label for="dateFin" class="col-form-label">Date de fin</label>
@@ -130,115 +135,103 @@
             <div class="table-responsive">
               <table id="example2" class="table table-striped table-bordered responsive-table">
                 <thead class="table-light">
-                <tr>
-                  <th class="col-numero">Numéro
-                    <button class="btn-tri-transparent" (click)="sortColumn('id')">
-                      <i class="lni lni-sort-amount-dsc"></i>
-                    </button>
-                  </th>
-                  <th class="col-employe">Employé
-                    <button class="btn-tri-transparent" (click)="sortColumn('employee.nom')">
-                      <i class="lni lni-sort-amount-dsc"></i>
-                    </button>
-                  </th>
-                  <th class="col-date">Date Déplacement
-                    <button class="btn-tri-transparent" (click)="sortColumn('date')">
-                      <i class="lni lni-sort-amount-dsc"></i>
-                    </button>
-                  </th>
-                  <th class="col-duree">Durée
-                    <button class="btn-tri-transparent" (click)="sortColumn('nmbJours')">
-                      <i class="lni lni-sort-amount-dsc"></i>
-                    </button>
-                  </th>
-                  <th class="col-motif">Motif
-                    <button class="btn-tri-transparent" (click)="sortColumn('motif')">
-                      <i class="lni lni-sort-amount-dsc"></i>
-                    </button>
-                  </th>
-                  <th class="col-atelier">Atelier
-                    <button class="btn-tri-transparent" (click)="sortColumn('atelier.designation')">
-                      <i class="lni lni-sort-amount-dsc"></i>
-                    </button>
-                  </th>
-                  <th class="col-affaire">Affaire
-                    <button class="btn-tri-transparent" (click)="sortColumn('projet.code')">
-                      <i class="lni lni-sort-amount-dsc"></i>
-                    </button>
-                  </th>
-                  <th class="col-actions text-center">Actions</th>
-                </tr>
+                  <tr>
+                    <th class="col-numero">Numéro
+                      <button class="btn-tri-transparent" (click)="sortColumn('id')">
+                        <i class="lni lni-sort-amount-dsc"></i>
+                      </button>
+                    </th>
+                    <th class="col-employe">Employé
+                      <button class="btn-tri-transparent" (click)="sortColumn('employee.nom')">
+                        <i class="lni lni-sort-amount-dsc"></i>
+                      </button>
+                    </th>
+                    <th class="col-date">Date Déplacement
+                      <button class="btn-tri-transparent" (click)="sortColumn('date')">
+                        <i class="lni lni-sort-amount-dsc"></i>
+                      </button>
+                    </th>
+                    <th class="col-duree">Durée
+                      <button class="btn-tri-transparent" (click)="sortColumn('nmbJours')">
+                        <i class="lni lni-sort-amount-dsc"></i>
+                      </button>
+                    </th>
+                    <th class="col-motif">Motif
+                      <button class="btn-tri-transparent" (click)="sortColumn('motif')">
+                        <i class="lni lni-sort-amount-dsc"></i>
+                      </button>
+                    </th>
+                    <th class="col-atelier">Atelier
+                      <button class="btn-tri-transparent" (click)="sortColumn('atelier.designation')">
+                        <i class="lni lni-sort-amount-dsc"></i>
+                      </button>
+                    </th>
+                    <th class="col-affaire">Affaire
+                      <button class="btn-tri-transparent" (click)="sortColumn('projet.code')">
+                        <i class="lni lni-sort-amount-dsc"></i>
+                      </button>
+                    </th>
+                    <th class="col-actions text-center">Actions</th>
+                  </tr>
                 </thead>
                 <tbody>
-                <tr *ngFor="let post of POSTS | search:pfiltre | paginate:{ itemsPerPage: tableSize, currentPage: page, totalItems: count }">
-                  <td class="col-numero">{{ post?.id }}</td>
+                  <tr
+                    *ngFor="let post of POSTS | search:pfiltre | paginate:{ itemsPerPage: tableSize, currentPage: page, totalItems: count }">
+                    <td class="col-numero">{{ post?.id }}</td>
 
-                  <td class="col-employe" *ngIf="post.employee.length>0">
-                    <div class="cell-content">
-                      <ng-container *ngFor="let employe of post.employee">
-                        <div class="employee-item">
-                          <i class='bx bxs-group me-1 font-14'></i>
-                          <span>{{ employe.nom +' '+employe.prenom }}</span>
-                        </div>
-                      </ng-container>
-                    </div>
-                  </td>
+                    <td class="col-employe" *ngIf="post.employee.length>0">
+                      <div class="cell-content">
+                        <ng-container *ngFor="let employe of post.employee">
+                          <div class="employee-item">
+                            <i class='bx bxs-group me-1 font-14'></i>
+                            <span>{{ employe.nom +' '+employe.prenom }}</span>
+                          </div>
+                        </ng-container>
+                      </div>
+                    </td>
 
-                  <td class="col-date">{{ post?.date | date: 'dd/MM/yyyy' }}</td>
+                    <td class="col-date">{{ post?.date | date: 'dd/MM/yyyy' }}</td>
 
-                  <td class="col-duree">{{ post?.nmbJours }}</td>
+                    <td class="col-duree">{{ post?.nmbJours }}</td>
 
-                  <td class="col-motif">
-                    <div class="cell-content">{{ post?.motif }}</div>
-                  </td>
+                    <td class="col-motif">
+                      <div class="cell-content">{{ post?.motif }}</div>
+                    </td>
 
-                  <td class="col-atelier">
-                    <div class="cell-content">{{ post?.employee[0]?.ateliers.designation }}</div>
-                  </td>
+                    <td class="col-atelier">
+                      <div class="cell-content">{{ post?.employee[0]?.ateliers.designation }}</div>
+                    </td>
 
-                  <td class="col-affaire">
-                    <div class="cell-content">{{ post?.projet?.code + ' - ' + post?.projet?.designation }}</div>
-                  </td>
+                    <td class="col-affaire">
+                      <div class="cell-content">{{ post?.projet?.code + ' - ' + post?.projet?.designation }}</div>
+                    </td>
 
-                  <td class="col-actions text-center">
-                    <div class="d-flex justify-content-center flex-wrap">
-                      <a *ngIf="hasRoleGroup(ROLES_ADMIN_AGENTSAISIE)"
-                         title="Afficher détails livraison"
-                         (click)="ImprimeLivraison(post)"
-                         class="action-btn">
-                        <i class="bx bxs-layer icon-large"></i>
-                      </a>
-                      <a *ngIf="hasRoleGroup(ROLES_ADMIN_AGENTSAISIE)"
-                         title="Modifier une livraison"
-                         (click)="recupItem(post)"
-                         data-toggle="modal"
-                         data-target="#updateModal"
-                         class="action-btn">
-                        <i class='bx bxs-edit icon-large'></i>
-                      </a>
-                      <a *ngIf="hasRoleGroup(ROLES_ADMIN_AGENTSAISIE)"
-                         title="Supprimer une livraison"
-                         (click)="recupItem(post)"
-                         data-toggle="modal"
-                         data-target="#deleteModal"
-                         class="action-btn">
-                        <i class='bx bxs-trash icon-large'></i>
-                      </a>
-                      <a *ngIf="hasRoleGroup(ROLES_ADMIN_AGENTSAISIE) && post.chauffeur!=null"
-                         title="Imprimer BL"
-                         (click)="ImprimeLivraison(post)"
-                         data-toggle="modal"
-                         data-target="#deleteModal"
-                         class="action-btn">
-                        <i class='bx bxs-file-pdf icon-large'></i>
-                      </a>
-                    </div>
-                  </td>
-                </tr>
+                    <td class="col-actions text-center">
+                      <div class="d-flex justify-content-center flex-wrap">
+                        <!-- Bouton Ordre de Mission (PDF) -->
+                        <a *ngIf="hasRoleGroup(ROLES_ADMIN_AGENTSAISIE)"
+                          title="Télécharger l'ordre de mission (PDF pour chaque employé)"
+                          (click)="downloadOrdreMission(post)" class="action-btn">
+                          <i class="bx bxs-file-pdf icon-large text-danger"></i>
+                        </a>
+                        <!-- Bouton Modifier -->
+                        <a *ngIf="hasRoleGroup(ROLES_ADMIN_AGENTSAISIE)" title="Modifier le déplacement"
+                          (click)="recupItem(post)" data-toggle="modal" data-target="#updateModal" class="action-btn">
+                          <i class='bx bxs-edit icon-large'></i>
+                        </a>
+                        <!-- Bouton Supprimer -->
+                        <a *ngIf="hasRoleGroup(ROLES_ADMIN_AGENTSAISIE)" title="Supprimer le déplacement"
+                          (click)="recupItem(post)" data-toggle="modal" data-target="#deleteModal" class="action-btn">
+                          <i class='bx bxs-trash icon-large'></i>
+                        </a>
+                      </div>
+                    </td>
+                  </tr>
                 </tbody>
               </table>
               <div class="pagination justify-content-center">
-                <pagination-controls previousLabel="Précédent" nextLabel="Suivant" (pageChange)="onTableDataChange($event)"></pagination-controls>
+                <pagination-controls previousLabel="Précédent" nextLabel="Suivant"
+                  (pageChange)="onTableDataChange($event)"></pagination-controls>
               </div>
             </div>
           </div>
@@ -253,17 +246,13 @@
 
 <!-- Modals -->
 <div class="modal fade" id="addModal">
-  <app-add-deplacement
-    (refreshTable)="ngOnInit()"
-  ></app-add-deplacement>
+  <app-add-deplacement (refreshTable)="ngOnInit()"></app-add-deplacement>
 </div>
 
 <div class="modal fade" id="updateModal">
-  <app-update-deplacement [dpl]="deplacementSelected"
-                          (refreshTable)="ngOnInit()"></app-update-deplacement>
+  <app-update-deplacement [dpl]="deplacementSelected" (refreshTable)="ngOnInit()"></app-update-deplacement>
 </div>
 
 <div class="modal fade" id="deleteModal">
-  <app-delete-deplacement [dpl]="deplacementSelected"
-                          (refreshTable)="ngOnInit()"></app-delete-deplacement>
+  <app-delete-deplacement [dpl]="deplacementSelected" (refreshTable)="ngOnInit()"></app-delete-deplacement>
 </div>
